Update TDLTestInputDataAmplification.java